bridges/tickwise-ffi/include/tickwise.h

// Result of every fallible call in the C surface.
//
// Zero is success. Any other value means the call did nothing, and
// `tickwise_last_error_message` describes why.
typedef enum TickwiseStatus {
    // The call succeeded.
    TICKWISE_STATUS_OK = 0,
    // A required pointer was null.
    TICKWISE_STATUS_NULL_POINTER = 1,
    // An argument was out of range, for example a marker label longer
    // than the format allows.
    TICKWISE_STATUS_INVALID_ARGUMENT = 2,
    // A string argument was not valid UTF-8.
    TICKWISE_STATUS_INVALID_UTF8 = 3,
    // Creating, reading, writing, or finishing a file failed, or the
    // file is not a valid recording.
    TICKWISE_STATUS_IO = 4,
    // Ticks must advance by exactly one between record calls.
    TICKWISE_STATUS_NON_SEQUENTIAL_TICK = 5,
    // The recorder or replayer was already finished. Only destroy is
    // allowed now.
    TICKWISE_STATUS_ALREADY_FINISHED = 6,
    // The library panicked internally. This is a Tickwise bug; please
    // report it with the last error message.
    TICKWISE_STATUS_PANIC = 7,
    // A live hash disagrees with the recorded one: the replay is not
    // reproducing the recorded session. The message names the tick.
    TICKWISE_STATUS_HASH_MISMATCH = 8,
    // The recording declares a different input encoding than the caller
    // expects, decision #11. Feeding its inputs to the simulation would
    // silently produce garbage.
    TICKWISE_STATUS_INPUT_FORMAT_MISMATCH = 9,
    // A requested tick lies outside the recording.
    TICKWISE_STATUS_TICK_OUT_OF_RANGE = 10,
    // The replay protocol was broken: after_tick without a step, or a
    // second next_step before the previous step was completed.
    TICKWISE_STATUS_PROTOCOL_MISUSE = 11,
    // A dump was requested at this tick and none was supplied. The step
    // stays pending; call after_tick again with the dump.
    TICKWISE_STATUS_MISSING_DUMP = 12,
    // The recording holds no ticks at all.
    TICKWISE_STATUS_EMPTY_RECORDING = 13,
} TickwiseStatus;
// An open recording session. Opaque to C; create with
// `tickwise_recorder_create`, release with `tickwise_recorder_destroy`.
typedef struct TickwiseRecorder TickwiseRecorder;
// Recorder configuration as plain C data.
//
// Strings are UTF-8 as pointer and length, without a terminating NUL.
// A null pointer with length zero is an empty string. Fill it with
// `tickwise_recorder_config_default` first and override what you need.
typedef struct TickwiseRecorderConfig {
    // Identifier of the game or application.
    const uint8_t *game_id;
    // Byte length of `game_id`.
    size_t game_id_len;
    // Build identifier, for example a git hash or version string.
    const uint8_t *build_hash;
    // Byte length of `build_hash`.
    size_t build_hash_len;
    // Platform the session runs on, for example windows-x86_64.
    const uint8_t *platform;
    // Byte length of `platform`.
    size_t platform_len;
    // Simulation rate in ticks per second.
    uint32_t tick_rate;
    // Seed the simulation started from.
    uint64_t rng_seed;
    // Creation time as unix seconds. Metadata only, never compared.
    uint64_t created_at;
    // Full hash interval in ticks. Zero disables full hashes.
    uint32_t full_hash_interval;
    // Snapshot interval in ticks. Zero disables snapshots.
    uint32_t snapshot_every;
    // Identifier of the hash algorithm the caller uses, see the
    // `TICKWISE_HASH_ALGO_*` constants.
    uint16_t hash_algo_id;
    // Caller-declared identifier of the input encoding. Replay refuses
    // a recording whose id differs from the build's.
    uint64_t input_format_id;
    // State dump interval in ticks. Zero records none. With dumps in
    // both recordings, `tickwise diff a.rec b.rec` reaches field level
    // with no replay. Check `tickwise_recorder_wants_dump` each tick and
    // supply the dump with `tickwise_recorder_record_dump`.
    uint32_t dump_interval;
} TickwiseRecorderConfig;
// Returns the version of the C surface, see `TICKWISE_ABI_VERSION`.
uint32_t tickwise_ffi_abi_version(void);
// Returns the crate version as a NUL-terminated UTF-8 string, for
// example `0.1.0`.
//
// The pointer refers to static storage. It stays valid for the lifetime
// of the process and must not be freed.
const char *tickwise_ffi_version(void);
// Returns the message of the last failed call on the current thread as
// a NUL-terminated UTF-8 string, or an empty string when no call has
// failed yet.
//
// The pointer stays valid until the next failing call on the same
// thread. Copy the string if you need it longer. Never free it.
const char *tickwise_last_error_message(void);
// Returns a short static name for a status code, for log lines.
//
// The pointer refers to static storage and must not be freed.
const char *tickwise_status_name(enum TickwiseStatus status);
// Computes the xxh3 64 bit hash of `len` bytes at `data`, identical to
// the hash the Rust serde layer produces for the same bytes.
//
// A null `data` with `len == 0` hashes the empty input. A null `data`
// with a nonzero `len` returns zero, because there is no status channel
// on this call; do not pass that.
//
// # Safety
//
// `data` must be valid for `len` readable bytes, or null with `len == 0`.
uint64_t tickwise_xxh3_64(const uint8_t *data,
                          size_t len);
// Fills a configuration with the defaults the Rust API uses: empty
// metadata, a full hash every 300 ticks, no snapshots, no dumps, hash
// algorithm 0, input format 0.
//
// # Safety
//
// `out` must be null or valid for writing one `TickwiseRecorderConfig`.
enum TickwiseStatus tickwise_recorder_config_default(struct TickwiseRecorderConfig *out);
// Creates a recorder writing to a new file at `path` and stores the
// handle in `out`. On failure `out` is left untouched.
//
// # Safety
//
// `path` must be valid for `path_len` readable bytes. `config` must be
// null or point to a valid configuration whose string pointers obey the
// same rule. `out` must be valid for writing one pointer. All borrowed
// memory is used only during this call.
enum TickwiseStatus tickwise_recorder_create(const uint8_t *path,
                                             size_t path_len,
                                             const struct TickwiseRecorderConfig *config,
                                             struct TickwiseRecorder **out);
// Records one tick: the input bytes, the light hash, and the full hash
// when `tickwise_recorder_wants_full_hash` is true for this tick. On
// other ticks `full_hash` is ignored and may be zero.
//
// Call exactly once per tick, in tick order. The first call may use any
// starting tick, every later call must advance by exactly one. Dumps are
// separate: check `tickwise_recorder_wants_dump` and call
// `tickwise_recorder_record_dump` after this.
//
// # Safety
//
// `rec` obeys the handle contract of `tickwise_recorder_destroy`.
// `inputs` must be valid for `inputs_len` readable bytes, or null with
// `inputs_len == 0`.
enum TickwiseStatus tickwise_recorder_record_tick(struct TickwiseRecorder *rec,
                                                  uint64_t tick,
                                                  const uint8_t *inputs,
                                                  size_t inputs_len,
                                                  uint64_t light_hash,
                                                  uint64_t full_hash);
// Returns true when the recorder will keep a full hash at this tick, so
// the caller computes the expensive hash only when it is needed.
//
// Returns false for a null or finished recorder.
//
// # Safety
//
// `rec` obeys the handle contract of `tickwise_recorder_destroy`.
bool tickwise_recorder_wants_full_hash(const struct TickwiseRecorder *rec,
                                       uint64_t tick);
// Returns true when the snapshot policy asks for a snapshot at this
// tick. The recorder cannot serialize state itself, so the caller
// checks this and calls `tickwise_recorder_record_snapshot` with its
// own bytes.
//
// Returns false for a null or finished recorder.
//
// # Safety
//
// `rec` obeys the handle contract of `tickwise_recorder_destroy`.
bool tickwise_recorder_wants_snapshot(const struct TickwiseRecorder *rec,
                                      uint64_t tick);
// Records a serialized state snapshot at the given tick.
//
// # Safety
//
// `rec` obeys the handle contract of `tickwise_recorder_destroy`.
// `data` must be valid for `data_len` readable bytes, or null with
// `data_len == 0`.
enum TickwiseStatus tickwise_recorder_record_snapshot(struct TickwiseRecorder *rec,
                                                      uint64_t tick,
                                                      const uint8_t *data,
                                                      size_t data_len);
// Records a caller-placed marker, for example round start. The label is
// UTF-8 as pointer and length, at most 65535 bytes.
//
// # Safety
//
// `rec` obeys the handle contract of `tickwise_recorder_destroy`.
// `label` must be valid for `label_len` readable bytes, or null with
// `label_len == 0`.
enum TickwiseStatus tickwise_recorder_record_marker(struct TickwiseRecorder *rec,
                                                    uint64_t tick,
                                                    const uint8_t *label,
                                                    size_t label_len);
// Flushes the last hashes, writes the index and trailer, and closes the
// file. The handle stays allocated but accepts nothing except
// `tickwise_recorder_destroy` afterwards. A second finish returns the
// `AlreadyFinished` status.
//
// A recorder destroyed without finish leaves an unreadable file.
//
// # Safety
//
// `rec` obeys the handle contract of `tickwise_recorder_destroy`.
enum TickwiseStatus tickwise_recorder_finish(struct TickwiseRecorder *rec);
// Releases a recorder handle. Null is a no-op. Using the handle after
// this call is undefined behavior.
//
// # Safety
//
// `rec` must be null or a pointer returned by `tickwise_recorder_create`
// that has not already been destroyed. This is the handle contract every
// other function in this module refers to.
void tickwise_recorder_destroy(struct TickwiseRecorder *rec);